Fixed the conversation boxes so the spacing isn't so weird. I changed the character icons to Lazy Loading.

--- a/src/app/components/ui/GameStart.module.css
+++ b/src/app/components/ui/GameStart.module.css
@@ -30,7 +30,7 @@
 
 .conversationGrid {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  /* grid-template-columns: 1fr 3fr; */
   justify-content: center;
   align-items: center;
   gap: 10px;
